k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-nodejs-guidelines
  labels:
    app: secure-nodejs-guidelines
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-nodejs-guidelines
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: secure-nodejs-guidelines
    spec:
      imagePullSecrets:
        - name: myregistrykey
      containers:
        - name: secure-nodejs-guidelines
          image: <IMAGE>
          ports:
          - containerPort: 3000
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: 250m
          #   limits:
          #     memory: "128Mi"
          #     cpu: 500m
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
            failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: secure-nodejs-guidelines
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: secure-nodejs-guidelines
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-nodejs-guidelines
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "securenodejsguidelines.ulisesgascon.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: secure-nodejs-guidelines
            port:
              number: 80
